Adding type to composer

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "audiologyholdings/cdnmd5",
   "description": "CDN Assets + md5 hash as part of the filename = always unique URL. A CakePHP Plugin/Lib to facilitate (for JS, CSS, Images, etc)",
+  "type": "cakephp-plugin",
   "require": {
     "cakephp/cakephp": ">=2.5.5.4 <3.0.0"
   }
